feat: add block contacts

--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
             <h1>Egor Novichkov</h1>
         </section>
     </header>
+    <hr>
     <main>
-            <section class="contacts">
+         <section class="contacts">
+            <h2>Contacts:</h2>
+            <ul>
+                <li>E-mail: <a href="mailto:spelldone1@gmail.com">spelldone1@gmail.com</a></li>
+                <li>Telegram: <a href="https://t.me/spelldone">@spelldone</a></li>
+                <li>Phone number: <a href="callto:2434124124">2434124124</a></li>
+                <li>GitHub: <a href="https://github.com/spelldone">spelldone</a></li>
+            </ul>
+
 
         </section>
     </main>
