feat: add some blocks

--- a/index.html
+++ b/index.html
@@ -27,9 +27,39 @@
                 <li>Phone number: <a href="callto:2434124124">2434124124</a></li>
                 <li>GitHub: <a href="https://github.com/spelldone">spelldone</a></li>
             </ul>
-
-
         </section>
+        <hr>
+        <section class="aboutme">
+            <h2>About me:</h2>
+            <p>Some information</p>
+        </section>
+        <hr>
+        <section class="hardskills">
+            <h2>Hardskills:</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Java</li>
+                <li>SQL</li>
+                <li>JavaScript</li>
+                <li>Git</li>
+            </ul>
+        </section>
+        <hr>
+        <section class="code">
+            <h2>Code example:</h2>
+            <pre>
+            <code>
+                public class Multiply {
+                    public static Double multiply(Double a, Double b) {
+                    return a * b;
+                    }
+                }
+            </code>
+        </pre>
+        </section>
+        <hr>
+        <section class=""></section>
     </main>
    
 </body>
