feat: add last blocks

--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
         </pre>
         </section>
         <hr>
-        <section class=""></section>
+        <section class="education">
+            <h2>Education:</h2>
+            <ul>
+                <li>Samara Univercity, Faculty of Informatics, 2018-2022</li>
+                <li>Stepik, Java base course</li>
+            </ul>
+        </section>
+        <section class="englevel">
+            <h2>English level:</h2>
+            <p>B1</p>
+        </section>
     </main>
-   
 </body>
 </html>
