feat:add css file and some corrections in html file

--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="code-guide.css">
+    <link rel="stylesheet" href="style.css">
     <title>CV by spelldone</title>
 </head>
+
 <body>
-    <header>
-        <a href="https://ibb.co/MpnM4yw"><img 
-            src="https://i.ibb.co/HY7nsLw/Vf-Tib4-Ro7-Qw.jpg"
-             alt="Vf-Tib4-Ro7-Qw" border="0" class="photo of spelldone"/>
-        </a>
-        <section class="name">
-            <h1>Egor Novichkov</h1>
-        </section>
-    </header>
-    <hr>
-    <main>
-         <section class="contacts">
-            <h2>Contacts:</h2>
-            <ul>
-                <li>E-mail: <a href="mailto:spelldone1@gmail.com">spelldone1@gmail.com</a></li>
-                <li>Telegram: <a href="https://t.me/spelldone">@spelldone</a></li>
-                <li>Phone number: <a href="callto:2434124124">2434124124</a></li>
-                <li>GitHub: <a href="https://github.com/spelldone">spelldone</a></li>
-            </ul>
-        </section>
+    <div class="wrap">
+        <header>
+            <img src="https://i.ibb.co/HY7nsLw/Vf-Tib4-Ro7-Qw.jpg" class="avatar" alt="photo">
+            <section class="name">
+                <h1>Egor Novichkov</h1>
+                <h3>Junior developer</h3>
+            </section>
+            <section class="contacts">
+                <h3>Contacts:</h3>
+                <ul>
+                    <li>E-mail: <a href="mailto:spelldone1@gmail.com">spelldone1@gmail.com</a></li>
+                    <li>Telegram: <a href="https://t.me/spelldone">@spelldone</a></li>
+                    <li>Phone number: <a href="callto:2434124124">2434124124</a></li>
+                    <li>GitHub: <a href="https://github.com/spelldone">spelldone</a></li>
+                </ul>
+            </section>
+        </header>
         <hr>
-        <section class="aboutme">
-            <h2>About me:</h2>
-            <p>Some information</p>
-        </section>
-        <hr>
-        <section class="hardskills">
-            <h2>Hardskills:</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Java</li>
-                <li>SQL</li>
-                <li>JavaScript</li>
-                <li>Git</li>
-            </ul>
-        </section>
-        <hr>
-        <section class="code">
-            <h2>Code example:</h2>
-            <pre>
+        <main>
+
+            <hr>
+            <section class="aboutme">
+                <h3>About me:</h3>
+                <p>Some information</p>
+            </section>
+            <hr>
+            <section class="hardskills">
+                <h3>Hardskills:</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java</li>
+                    <li>SQL</li>
+                    <li>JavaScript</li>
+                    <li>Git</li>
+                </ul>
+            </section>
+            <hr>
+            <section class="code">
+                <h3>Code example:</h3>
+                <pre>
             <code>
                 public class Multiply {
                     public static Double multiply(Double a, Double b) {
@@ -57,19 +59,36 @@
                 }
             </code>
         </pre>
+            </section>
+            <hr>
+            <section class="education">
+                <h3>Education:</h3>
+                <ul>
+                    <li>Samara Univercity, Faculty of Informatics, 2018-2022</li>
+                    <li>Stepik, Java base course</li>
+                </ul>
+            </section>
+            <hr>
+            <section class="englevel">
+                <h3>English level:</h3>
+                <p>B1</p>
+            </section>
+        </main>
+        <footer>
+        
+            <section class="info">
+            <h4>Created in 2021 by</h4>
+            <a href="https://github.com/spelldone" target="_blank">
+                <figure class="github">
+                    <img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="GitHub">
+                <figcaption>
+                    <p>spelldone</p>
+                 </figcaption>
+                </figure>
+            </a>
         </section>
-        <hr>
-        <section class="education">
-            <h2>Education:</h2>
-            <ul>
-                <li>Samara Univercity, Faculty of Informatics, 2018-2022</li>
-                <li>Stepik, Java base course</li>
-            </ul>
-        </section>
-        <section class="englevel">
-            <h2>English level:</h2>
-            <p>B1</p>
-        </section>
-    </main>
+       
+        </footer>
+    </div>
 </body>
 </html>
